[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.5",
    "deepagents",
    "fastapi>=0.128.8",
    "fastembed>=0.5.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=1.2.2",
    "langgraph>=0.2.0",
    "markdown-it-py>=3.0.0",
    "markdownify>=0.11.0",
    "openai>=2.26.0",
    "passlib>=1.7.4",
    "pymysql>=1.1.2",
    "python-dotenv>=1.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.0",
    "redis>=7.0.1",
    "requests",
    "sqlalchemy>=2.0.48",
    "tavily>=0.5.0",
    "tiktoken>=0.9.0",
    "typing-extensions>=4.12.0",
    "uvicorn>=0.39.0",
]
